[package]
name = "enqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = "1.6.0"
chrono = "0.4.37"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
pretty_env_logger = "0.5.0"
rand = "0.8.5"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-query = "0.30.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha3 = { version = "0.10.8", features = ["asm"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "full"] }
